packages/typ/tests/fixtures/diagnostics/0227_adt_recursive_tree_payload_mismatch_09.ml.infer.expected
File "0227_adt_recursive_tree_payload_mismatch_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0227_adt_recursive_tree_payload_mismatch_09 is not a valid module name.

File "0227_adt_recursive_tree_payload_mismatch_09.ml", line 5, characters 24-28:
5 |   Node_iota (Leaf_iota, true, Leaf_iota)
                            ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
